Clean up minor issues with SonarLint